using System;
using Microsoft.EntityFrameworkCore;
using Microsoft.EntityFrameworkCore.Infrastructure;
using Microsoft.EntityFrameworkCore.Storage.ValueConversion;
using NssOrderTool.Database;

namespace NssOrderTool.Migrations
{
  [DbContext(typeof(AppDbContext))]
  partial class AppDbContextModelSnapshot : ModelSnapshot
  {
    protected override void BuildModel(ModelBuilder modelBuilder)
    {
      modelBuilder.HasAnnotation("ProductVersion", "9.0.0");

      modelBuilder.Entity("NssOrderTool.Models.Entities.AliasEntity", b =>
          {
            b.Property<string>("AliasName")
                      .HasColumnType("TEXT")
                      .HasColumnName("alias_name");

            b.Property<DateTime>("CreatedAt")
                      .HasColumnType("TEXT")
                      .HasColumnName("created_at");

            b.Property<bool>("IsDeleted")
                      .HasColumnType("INTEGER")
                      .HasColumnName("is_deleted");

            b.Property<string>("TargetPlayerId")
                      .IsRequired()
                      .HasColumnType("TEXT")
                      .HasColumnName("target_player_id");

            b.Property<DateTime>("UpdatedAt")
                      .HasColumnType("TEXT")
                      .HasColumnName("updated_at");

            b.HasKey("AliasName");

            b.ToTable("Aliases");
          });

      modelBuilder.Entity("NssOrderTool.Models.Entities.ArenaParticipantEntity", b =>
          {
            b.Property<int>("Id")
                      .ValueGeneratedOnAdd()
                      .HasColumnType("INTEGER")
                      .HasColumnName("participant_id");

            b.Property<DateTime>("CreatedAt")
                      .HasColumnType("TEXT")
                      .HasColumnName("created_at");

            b.Property<bool>("IsDeleted")
                      .HasColumnType("INTEGER")
                      .HasColumnName("is_deleted");

            b.Property<string>("PlayerId")
                      .IsRequired()
                      .HasColumnType("TEXT")
                      .HasColumnName("player_id");

            b.Property<int>("Rank")
                      .HasColumnType("INTEGER")
                      .HasColumnName("rank");

            b.Property<int>("SessionId")
                      .HasColumnType("INTEGER")
                      .HasColumnName("session_id");

            b.Property<int>("SlotIndex")
                      .HasColumnType("INTEGER")
                      .HasColumnName("slot_index");

            b.Property<DateTime>("UpdatedAt")
                      .HasColumnType("TEXT")
                      .HasColumnName("updated_at");

            b.Property<int>("WinCount")
                      .HasColumnType("INTEGER")
                      .HasColumnName("win_count");

            b.HasKey("Id");

            b.HasIndex("PlayerId");

            b.HasIndex("SessionId");

            b.ToTable("ArenaParticipants");
          });

      modelBuilder.Entity("NssOrderTool.Models.Entities.ArenaRoundEntity", b =>
          {
            b.Property<int>("Id")
                      .ValueGeneratedOnAdd()
                      .HasColumnType("INTEGER")
                      .HasColumnName("round_id");

            b.Property<DateTime>("CreatedAt")
                      .HasColumnType("TEXT")
                      .HasColumnName("created_at");

            b.Property<bool>("IsDeleted")
                      .HasColumnType("INTEGER")
                      .HasColumnName("is_deleted");

            b.Property<int>("RoundNumber")
                      .HasColumnType("INTEGER")
                      .HasColumnName("round_number");

            b.Property<int>("SessionId")
                      .HasColumnType("INTEGER")
                      .HasColumnName("session_id");

            b.Property<DateTime>("UpdatedAt")
                      .HasColumnType("TEXT")
                      .HasColumnName("updated_at");

            b.Property<int>("WinningTeam")
                      .HasColumnType("INTEGER")
                      .HasColumnName("winning_team");

            b.HasKey("Id");

            b.HasIndex("SessionId");

            b.ToTable("ArenaRounds");
          });

      modelBuilder.Entity("NssOrderTool.Models.Entities.ArenaSessionEntity", b =>
          {
            b.Property<int>("Id")
                      .ValueGeneratedOnAdd()
                      .HasColumnType("INTEGER")
                      .HasColumnName("session_id");

            b.Property<DateTime>("CreatedAt")
                      .HasColumnType("TEXT")
                      .HasColumnName("created_at");

            b.Property<bool>("IsDeleted")
                      .HasColumnType("INTEGER")
                      .HasColumnName("is_deleted");

            b.Property<string>("PlayersJson")
                      .IsRequired()
                      .HasColumnType("TEXT");

            b.Property<DateTime>("SessionDate")
                      .HasColumnType("TEXT")
                      .HasColumnName("session_date");

            b.Property<DateTime>("UpdatedAt")
                      .HasColumnType("TEXT")
                      .HasColumnName("updated_at");

            b.HasKey("Id");

            b.ToTable("ArenaSessions");
          });

      modelBuilder.Entity("NssOrderTool.Models.Entities.ObservationDetailEntity", b =>
          {
            b.Property<int>("Id")
                      .ValueGeneratedOnAdd()
                      .HasColumnType("INTEGER")
                      .HasColumnName("detail_id");

            b.Property<DateTime>("CreatedAt")
                      .HasColumnType("TEXT")
                      .HasColumnName("created_at");

            b.Property<bool>("IsDeleted")
                      .HasColumnType("INTEGER")
                      .HasColumnName("is_deleted");

            b.Property<int>("ObservationId")
                      .HasColumnType("INTEGER")
                      .HasColumnName("observation_id");

            b.Property<int>("OrderIndex")
                      .HasColumnType("INTEGER")
                      .HasColumnName("order_index");

            b.Property<string>("PlayerId")
                      .IsRequired()
                      .HasColumnType("TEXT")
                      .HasColumnName("player_id");

            b.Property<DateTime>("UpdatedAt")
                      .HasColumnType("TEXT")
                      .HasColumnName("updated_at");

            b.HasKey("Id");

            b.HasIndex("ObservationId");

            b.HasIndex("PlayerId");

            b.ToTable("ObservationDetails");
          });

      modelBuilder.Entity("NssOrderTool.Models.Entities.ObservationEntity", b =>
          {
            b.Property<int>("Id")
                      .ValueGeneratedOnAdd()
                      .HasColumnType("INTEGER")
                      .HasColumnName("observation_id");

            b.Property<DateTime>("CreatedAt")
                      .HasColumnType("TEXT")
                      .HasColumnName("created_at");

            b.Property<bool>("IsDeleted")
                      .HasColumnType("INTEGER")
                      .HasColumnName("is_deleted");

            b.Property<DateTime>("ObservationTime")
                      .HasColumnType("TEXT")
                      .HasColumnName("observation_time");

            b.Property<DateTime>("UpdatedAt")
                      .HasColumnType("TEXT")
                      .HasColumnName("updated_at");

            b.HasKey("Id");

            b.ToTable("Observations");
          });

      modelBuilder.Entity("NssOrderTool.Models.Entities.PlayerEntity", b =>
          {
            b.Property<string>("Id")
                      .HasColumnType("TEXT")
                      .HasColumnName("player_id");

            b.Property<DateTime>("CreatedAt")
                      .HasColumnType("TEXT")
                      .HasColumnName("created_at");

            b.Property<DateTime>("FirstSeen")
                      .HasColumnType("TEXT")
                      .HasColumnName("first_seen");

            b.Property<bool>("IsDeleted")
                      .HasColumnType("INTEGER")
                      .HasColumnName("is_deleted");

            b.Property<string>("Name")
                      .HasColumnType("TEXT")
                      .HasColumnName("name");

            b.Property<double>("RateMean")
                      .HasColumnType("REAL")
                      .HasColumnName("rate_mean");

            b.Property<double>("RateSigma")
                      .HasColumnType("REAL")
                      .HasColumnName("rate_sigma");

            b.Property<DateTime>("UpdatedAt")
                      .HasColumnType("TEXT")
                      .HasColumnName("updated_at");

            b.HasKey("Id");

            b.ToTable("Players");
          });

      modelBuilder.Entity("NssOrderTool.Models.Entities.RateHistoryEntity", b =>
          {
            b.Property<int>("Id")
                      .ValueGeneratedOnAdd()
                      .HasColumnType("INTEGER");

            b.Property<string>("PlayerId")
                      .IsRequired()
                      .HasColumnType("TEXT");

            b.Property<double>("Rate")
                      .HasColumnType("REAL");

            b.Property<DateTime>("RecordedAt")
                      .HasColumnType("TEXT");

            b.HasKey("Id");

            b.ToTable("RateHistories");
          });

      modelBuilder.Entity("NssOrderTool.Models.Entities.SequencePairEntity", b =>
          {
            b.Property<string>("PredecessorId")
                      .HasColumnType("TEXT")
                      .HasColumnName("predecessor_id");

            b.Property<string>("SuccessorId")
                      .HasColumnType("TEXT")
                      .HasColumnName("successor_id");

            b.Property<DateTime>("CreatedAt")
                      .HasColumnType("TEXT")
                      .HasColumnName("created_at");

            b.Property<int>("Frequency")
                      .HasColumnType("INTEGER")
                      .HasColumnName("frequency");

            b.Property<bool>("IsDeleted")
                      .HasColumnType("INTEGER")
                      .HasColumnName("is_deleted");

            b.Property<DateTime>("UpdatedAt")
                      .HasColumnType("TEXT")
                      .HasColumnName("updated_at");

            b.HasKey("PredecessorId", "SuccessorId");

            b.ToTable("SequencePairs");
          });

      modelBuilder.Entity("NssOrderTool.Models.Entities.ArenaParticipantEntity", b =>
          {
            b.HasOne("NssOrderTool.Models.Entities.PlayerEntity", "Player")
                      .WithMany()
                      .HasForeignKey("PlayerId")
                      .OnDelete(DeleteBehavior.Cascade)
                      .IsRequired();

            b.HasOne("NssOrderTool.Models.Entities.ArenaSessionEntity", "Session")
                      .WithMany("Participants")
                      .HasForeignKey("SessionId")
                      .OnDelete(DeleteBehavior.Cascade)
                      .IsRequired();

            b.Navigation("Player");

            b.Navigation("Session");
          });

      modelBuilder.Entity("NssOrderTool.Models.Entities.ArenaRoundEntity", b =>
          {
            b.HasOne("NssOrderTool.Models.Entities.ArenaSessionEntity", "Session")
                      .WithMany("Rounds")
                      .HasForeignKey("SessionId")
                      .OnDelete(DeleteBehavior.Cascade)
                      .IsRequired();

            b.Navigation("Session");
          });

      modelBuilder.Entity("NssOrderTool.Models.Entities.ObservationDetailEntity", b =>
          {
            b.HasOne("NssOrderTool.Models.Entities.ObservationEntity", "Observation")
                      .WithMany("Details")
                      .HasForeignKey("ObservationId")
                      .OnDelete(DeleteBehavior.Cascade)
                      .IsRequired();

            b.HasOne("NssOrderTool.Models.Entities.PlayerEntity", "Player")
                      .WithMany()
                      .HasForeignKey("PlayerId")
                      .OnDelete(DeleteBehavior.Cascade)
                      .IsRequired();

            b.Navigation("Observation");

            b.Navigation("Player");
          });

      modelBuilder.Entity("NssOrderTool.Models.Entities.ArenaSessionEntity", b =>
          {
            b.Navigation("Participants");

            b.Navigation("Rounds");
          });

      modelBuilder.Entity("NssOrderTool.Models.Entities.ObservationEntity", b =>
          {
            b.Navigation("Details");
          });
    }
  }
}
